<resources>
    <string name="app_name">CVF</string>
    <string name="text_msg_recovery">RECUPERANDO DADOS DA TABELA \"%1$s\" DO WEB SERVICE.</string>
    <string name="text_msg_clean">LIMPANDO A TABELA \"%1$s\".</string>
    <string name="text_msg_save">SALVANDO DADOS NA TABELA \"%1$s\".</string>
    <string name="text_msg_get_token">ENVIANDO DADOS DE TOKEN</string>
    <string name="text_msg_save_token">SALVANDO DADOS DE TOKEN</string>
    <string name="text_msg_finish_update_initial">AJUSTE INICIAIS FINALIZADO COM SUCESSO!</string>
    <string name="text_msg_finish_update_completed">ATUALIZAÇÃO DE DADOS REALIZADO COM SUCESSO!</string>
    <string name="text_field_empty">CAMPO VAZIO! POR FAVOR, PREENCHA O CAMPO \"%1$s\" PARA DAR CONTINUIDADE AO APONTAMENTO.</string>
    <string name="text_not_selection">CAMPO VAZIO! POR FAVOR, SELECIONE ALGUM ITEM DO \"%1$s\" PARA DAR CONTINUIDADE AO APONTAMENTO.</string>
    <string name="text_input_data_invalid">DADO INVÁLIDO! POR FAVOR, VERIFIQUE SE O CAMPO \"%1$s\" FOI DIGITADO CORRETAMENTE OU ATUALIZE OS DADOS PARA VERIFICAR SE OS MESMOS NÃO ESTÃO DESATUALIZADOS.</string>
    <string name="text_field_empty_config">CAMPO VAZIO! POR FAVOR, PREENCHA TODOS OS CAMPOS PARA SALVAR AS CONFIGURAÇÕES E ATUALIZAR TODAS AS BASES DE DADOS.</string>
    <string name="text_update_failure">FALHA DE ATUALIZAÇÃO DE DADOS! POR FAVOR, ENTRE EM CONTATO COM TI. %1$s</string>
    <string name="text_token_failure">FALHA DE RECUPERACAO DE TOKEN! POR FAVOR ENTRE EM CONTATO COM TI. %1$s</string>
    <string name="text_failure">FALHA INESPERADA NO APLICATIVO! POR FAVOR ENTRE EM CONTATO COM TI. %1$s</string>
    <string name="text_number_1">1</string>
    <string name="text_number_2">2</string>
    <string name="text_number_3">3</string>
    <string name="text_number_4">4</string>
    <string name="text_number_5">5</string>
    <string name="text_number_6">6</string>
    <string name="text_number_7">7</string>
    <string name="text_number_8">8</string>
    <string name="text_number_9">9</string>
    <string name="text_number_0">0</string>
    <string name="text_number_00">00</string>
    <string name="text_comma">,</string>
    <string name="text_pattern_clean">APAGAR</string>
    <string name="text_pattern_update">ATUALIZAR DADOS</string>
    <string name="text_pattern_ok">OK</string>
    <string name="text_pattern_cancel">CANCELAR</string>
    <string name="text_pattern_return">RETORNAR</string>
    <string name="text_config">CONFIGURAÇÃO</string>
    <string name="text_number">NRO APARELHO</string>
    S<string name="text_password">SENHA</string>
    <string name="text_pattern_save">SALVAR</string>
    <string name="text_front">FRENTE</string>
    <string name="text_pattern_next">AVANÇAR</string>
    <string name="text_release">LIBERAÇÃO</string>
    <string name="text_item_release">LIBERAÇÃO: %1$s\nO.S.: %2$s\nPROPRIEDADE: %3$s</string>
    <string name="text_driver">MATRIC. MOTORISTA</string>
    <string name="text_cancel_note">CANCELAR APONTAMENTO</string>
    <string name="text_title_menu">MENU</string>
    <string name="text_close">SAIR</string>
    <string name="text_unknown_error">UNKNONW ERROR</string>
    <string name="text_msg_check_data">CHECANDO \"%1$s\" NO WEB SERVICE. POR FAVOR, AGUARDE A CHECAGEM PARA DAR ANDAMENTO AO APONTAMENTO.</string>
    <string name="text_password_invalid">SENHA INVÁLIDA!</string>
    <string name="text_truck">NRO. CAMINHÃO</string>
    <string name="text_title_msg">ATENÇÃO</string>
    <string name="text_msg_cart">DESEJA ADICIONAR A CARRETA %1$s?</string>
    <string name="text_pattern_no">NÃO</string>
    <string name="text_pattern_yes">SIM</string>
    <string name="text_cart">NRO. CARRETA %1$s</string>
    <string name="text_title_travel">VIAGEM</string>
    <string name="text_finish_travel">FINALIZAR VIAGEM</string>
    <string name="text_clean_travel">APAGAR VIAGEM</string>
    <string name="text_return_invalid_front">A FRENTE JÁ FOI ALTERADA NO APLICATIVO. POR FAVOR, PARA RETORNAR AO FLUXO PRINCIPAL DO APLICATIVO PRECISA SELECIONA ALGUMA LIBERAÇÃO.</string>
    <string name="text_data_menu">FRENTE: %1$s\nLIBERAÇÃO: %2$s\nO.S.: %3$s\nPROPRIEDADE: %4$s</string>
    <string name="text_msg_delete">DESEJA REALMENTE EXCLUIR A VIAGEM QUE ESTÁ SENDO REALIZADA?</string>
    <string name="text_msg_finish_note">A VIAGEM FOI FINALIZADA COM SUCESSO!!!</string>
    <string name="text_header_note">MOTORISTA: %1$s - %2$s\nCAMINHÃO: %3$s - %4$s</string>
    <string name="text_cart_note">CARRETA %1$s: %2$s - %3$s</string>
    <string name="text_msg_cart_repeated">CARRETA %1$s JÁ FOI INSERIDA ANTERIORMENTE. POR FAVOR VERIFIQUE A NUMERAÇÃO E A ORDEM DA CARRETA.</string>
    <string name="text_msg_cart_inverted">O EQUIPAMENTO DIGITADO NÃO CORRESPONDE A POSIÇÃO DO CONJUNTO. VERIFIQUE SE A NUMERAÇÃO ESTÁ CORRETA E TENTE NOVAMENTE!</string>
</resources>