...
import br.com.usinasantafe.cvf.presenter.theme.MsgErrors
import br.com.usinasantafe.cvf.presenter.theme.TextButtonDesign
import br.com.usinasantafe.cvf.presenter.theme.TextFieldPasswordDesign
import br.com.usinasantafe.cvf.presenter.theme.TitleDesign
import br.com.usinasantafe.cvf.utils.UiStatusState

const val TAG_PASSWORD_TEXT_FIELD_SCREEN = "tag_password_text_field_screen"

@Composable
fun PasswordScreen(
    viewModel: PasswordViewModel = hiltViewModel(),
    onNavConfig: () -> Unit,
    onNavFront: () -> Unit,
...
